# curl-cpp-wrapper

./: .gitignore  NetworkClient.cpp  NetworkClient.h  README.md
Core/Utils/: CoreTypes.h  CoreUtils.cpp  CoreUtils.h  StringUtils.cpp  StringUtils.h  utils_unix.h  utils_win.h
CurlTest/: CMakeLists.txt  CurlTest.cpp  NetworkClientTest.cpp  conanfile.txt  readme.txt
Test/: BUILDING.md  CMakeLists.txt  NetworkClientTest.cpp  conanfile.txt  test_server.py
